--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+altgraph==0.17.3
 certifi==2023.7.22
 charset-normalizer==3.2.0
 idna==3.4
 joblib==1.3.2
 numpy==1.25.2
 Pillow==10.0.0
+pyinstaller==5.13.2
+pyinstaller-hooks-contrib==2023.8
 requests==2.31.0
 scikit-learn==1.3.0
 scipy==1.11.2
